@@ -531,18 +531,6 @@ void KigPainter::drawRay( const Coordinate& a, const Coordinate& b )
   drawSegment( a, tb );
 }
 
-inline Coordinate conicGetCoord( double theta, double ecostheta0,
-                                 double esintheta0, double pdimen,
-                                 const Coordinate& focus1 )
-{
-  // TODO: eliminate some cos() and sin() calls with a table...
-  double costheta = cos( theta );
-  double sintheta = sin( theta );
-  double ecosthetamtheta = costheta*ecostheta0 + sintheta*esintheta0;
-  double rho = pdimen / (1.0 - ecosthetamtheta);
-  return focus1 + rho * Coordinate( costheta, sintheta );
-}
-
 typedef std::pair<double,Coordinate> coordparampair;
 
 struct workitem
@@ -553,230 +541,6 @@ struct workitem
   coordparampair second;
   Rect		 *overlay;
 };
-
-void KigPainter::drawConic( const ConicPolarData& data )
-{
-  Coordinate focus1 = data.focus1;
-  double pdimen = data.pdimen;
-  double ecostheta0 = data.ecostheta0;
-  double esintheta0 = data.esintheta0;
-
-  // we manage our own overlay
-  bool tNeedOverlay = mNeedOverlay;
-  mNeedOverlay = false;
-
-  QPen pen = mP.pen();
-  pen.setCapStyle( Qt::RoundCap );
-  mP.setPen( pen );
-
-  // this stack contains pairs of Coordinates ( parameter intervals )
-  // that we still need to process:
-  std::stack<workitem> workstack;
-  // mp: this stack contains all the generated overlays:
-  // the strategy for generating the overlay structure is the same
-  // recursive-like used to draw the segments: a new rectangle is
-  // generated whenever the length of a segment becomes lower than
-  // overlayRectSize(), or if the segment would be drawn anyway
-  // to avoid strange things from happening we impose that the
-  // distance in parameter space be less than a threshold before
-  // generating any overlay.
-  //
-  // The third parameter in workitem is a pointer into a stack of
-  // all generated rectangles (in real coordinate space); if 0
-  // there is no rectangles associated to that segment yet.
-  //
-  // Using the final mOverlay stack would be much more efficient, but
-  // 1. needs transformations into window space
-  // 2. would be more difficult to drop rectangles not intersecting
-  //    the window.
-  std::stack<Rect> overlaystack;
-
-  // mp: the original version in which an initial set of 20 intervals
-  // were pushed onto the stack is replaced by a single interval and
-  // by forcing subdivision till h < hmax (with more or less the same
-  // final result).
-  // First push the [0,2*pi] interval into the stack:
-
-  Coordinate coo1 = conicGetCoord( 0, ecostheta0, esintheta0, pdimen, focus1 );
-  Coordinate coo2 = conicGetCoord( 2*M_PI, ecostheta0, esintheta0, pdimen, focus1 );
-  workstack.push( workitem(
-                    coordparampair( 0, coo1 ),
-                    coordparampair( 2*M_PI, coo2 ),
-                    0 ) );
-
-  // maxlength is the square of the maximum size that we allow
-  // between two points..
-  double maxlength = 1.5 * pixelWidth();
-  maxlength *= maxlength;
-  // error squared is required to be less that sigma (half pixel)
-  double sigma = maxlength/4;
-  // distance between two parameter values cannot be too small
-  double hmin = 1e-4;
-  // distance between two parameter values cannot be too large
-  double hmax = 2*M_PI/40;
-  double hmaxoverlay = 2*M_PI/8;
-
-  int count = 1;               // the number of segments we've already
-                               // visited...
-  static const int maxnumberofpoints = 1000;
-
-  const Rect& sr = window();
-
-  // we don't use recursion, but a stack based approach for efficiency
-  // concerns...
-  while ( ! workstack.empty() && count < maxnumberofpoints )
-  {
-    workitem curitem = workstack.top();
-    workstack.pop();
-    bool curitemok = true;
-    while ( curitemok && count++ < maxnumberofpoints )
-    {
-      // we take the middle parameter of the two previous points...
-      Coordinate p0 = curitem.first.second;
-      Coordinate p1 = curitem.second.second;
-      double t2 = ( curitem.first.first + curitem.second.first ) / 2;
-      double h = fabs( curitem.second.first - curitem.first.first ) /2;
-      Rect *overlaypt = curitem.overlay;
-      Coordinate p2 = conicGetCoord( t2, ecostheta0, esintheta0,
-                                     pdimen, focus1 );
-      bool dooverlay = ! overlaypt && h < hmaxoverlay
- && fabs( p0.x - p1.x ) <= overlayRectSize()
- && fabs( p0.y - p1.y ) <= overlayRectSize();
-      bool addn = sr.contains( p2 );
-      // estimated error between the curve and the segments
-      double errsq = (0.5*p0 + 0.5*p1 - p2).squareLength();
-      errsq /= 4;
-      curitemok = false;
-      bool dodraw = h < hmax && ( errsq < sigma || h < hmin );
-      if ( tNeedOverlay && ( dooverlay || dodraw ) )
-      {
-        Rect newoverlay( p0, p1 );
-        overlaystack.push( newoverlay );
-        overlaypt = &overlaystack.top();
-      }
-      if ( overlaypt ) overlaypt->setContains( p2 );
-      if ( dodraw )
-      {
-        // draw the two segments
-        QPoint tp0 = toScreen(p0);
-        QPoint tp1 = toScreen(p1);
-        QPoint tp2 = toScreen(p2);
-        mP.drawLine( tp0, tp2 );
-        mP.drawLine( tp2, tp1 );
-      }
-      else
-      {
-        // push into stack in order to process both subintervals
-        if (addn || sr.contains( p0 ) || h >= hmax)
-          workstack.push( workitem( curitem.first, coordparampair( t2, p2 ),
-                                    overlaypt ) );
-        if (addn || sr.contains( p1 ) || h >= hmax)
-        {
-          curitem = workitem( coordparampair( t2, p2 ), curitem.second ,
-                              overlaypt );
-          curitemok = true;
-        }
-      }
-    }
-  }
-
-  assert ( tNeedOverlay || overlaystack.empty() );
-  if ( tNeedOverlay )
-  {
-    Rect border = window();
-    while ( ! overlaystack.empty() )
-    {
-      Rect overlay = overlaystack.top();
-      overlaystack.pop();
-      if (overlay.intersects( border ))
-        mOverlay.push_back( toScreenEnlarge( overlay ) );
-    }
-  }
-  mNeedOverlay = tNeedOverlay;
-  pen.setCapStyle( Qt::FlatCap );
-  mP.setPen( pen );
-}
-
-void KigPainter::drawCubicRecurse (
-  double& xleft, double& yleft, bool& validleft,
-  int& numrootsleft,
-  double &xright, double &yright, bool &validright,
-  int &numrootsright,
-  const CubicCartesianData &data, int &root,
-  double &ymin, double &ymax, double &tol,
-  bool& tNeedOverlay, Rect& overlay)
-{
-  double ltol = tol;
-  if ( ! ( validleft && validright && numrootsleft == numrootsright ) )
-    // in questo caso la tolleranza e' molto minore
-    ltol /= 100;
-  if ( xright - xleft < ltol )
-  {
-    if ( validleft && validright && numrootsleft == numrootsright )
-    {
-      /* draw the segment */
-      Coordinate pleft = Coordinate( xleft, yleft );
-      Coordinate pright = Coordinate( xright, yright );
-      QPoint tpleft = toScreen(pleft);
-      QPoint tpright = toScreen(pright);
-      mP.drawLine( tpleft, tpright );
-    }
-  } else {
-    double xmiddle = (xright + xleft)/2;
-    bool validmiddle;
-    int numrootsmiddle;
-    double ymiddle = calcCubicYvalue ( xmiddle, ymin, ymax, root, data,
-                                       validmiddle, numrootsmiddle );
-    Coordinate pmiddle = Coordinate( xmiddle, ymiddle );
-    if ( validmiddle && tNeedOverlay ) overlay.setContains( pmiddle );
-    drawCubicRecurse ( xleft, yleft, validleft, numrootsleft,
-                   xmiddle, ymiddle, validmiddle, numrootsmiddle,
-                   data, root, ymin, ymax, tol, tNeedOverlay, overlay );
-    drawCubicRecurse ( xmiddle, ymiddle, validmiddle, numrootsmiddle,
-                   xright, yright, validright, numrootsright,
-                   data, root, ymin, ymax, tol, tNeedOverlay, overlay );
-  }
-}
-
-void KigPainter::drawCubic( const CubicCartesianData& data )
-{
-  // we manage our own overlay
-  bool tNeedOverlay = mNeedOverlay;
-  mNeedOverlay = false;
-  QPen pen = mP.pen();
-  pen.setCapStyle( Qt::RoundCap );
-  mP.setPen( pen );
-  Rect border = window();
-  Rect overlay;
-
-  double ymin = border.bottom();
-  double ymax = border.top();
-  bool validleft, validright;
-  int numrootsleft, numrootsright;
-
-  double xleft = border.left();
-  double xright = border.right();
-  double tol = (xright - xleft)/100;
-  for ( int root = 1; root <= 3; root++ )
-  {
-    double yleft = calcCubicYvalue ( xleft, ymin, ymax, root, data,
-                   validleft, numrootsleft );
-    double yright = calcCubicYvalue ( xright, ymin, ymax, root, data,
-                   validright, numrootsright );
-    Coordinate p = Coordinate( xleft, yleft );
-    if ( validleft && tNeedOverlay ) overlay.setContains( p );
-    p = Coordinate( xright, yright );
-    if ( validright && tNeedOverlay ) overlay.setContains( p );
-    drawCubicRecurse ( xleft, yleft, validleft, numrootsleft,
-                   xright, yright, validright, numrootsright,
-                   data, root, ymin, ymax, tol,
-                   tNeedOverlay, overlay);
-  }
-  if ( tNeedOverlay ) mOverlay.push_back( toScreen( overlay ) );
-  mNeedOverlay = tNeedOverlay;
-  pen.setCapStyle( Qt::FlatCap );
-  mP.setPen( pen );
-}
 
 void KigPainter::drawLine( const LineData& d )
 {
@@ -884,7 +648,23 @@ inline Coordinate locusGetCoord( double p, const CurveImp* curve, const ObjectHi
   delete o;
   return ret;
 };
- */
+*/
+
+class CurveImpPointCalcer
+{
+  const CurveImp* curve;
+public:
+  CurveImpPointCalcer( const CurveImp* c )
+    : curve( c )
+    {
+    };
+  static const double endinterval;
+  inline const Coordinate getPoint( double param, const KigDocument& d ) const {
+    return curve->getPoint( param, d );
+  }
+};
+
+const double CurveImpPointCalcer::endinterval = 1.;
 
 void KigPainter::drawCurve( const CurveImp* curve )
 {
@@ -918,19 +698,17 @@ void KigPainter::drawCurve( const CurveImp* curve )
   //    the window.
   std::stack<Rect> overlaystack;
 
-  bool valid = true; ///
-
   // mp: the original version in which an initial set of 20 intervals
   // were pushed onto the stack is replaced by a single interval and
   // by forcing subdivision till h < hmax (with more or less the same
   // final result).
   // First push the [0,1] interval into the stack:
 
-  Coordinate coo1 = curve->getPoint( 0, mdoc );
-  Coordinate coo2 = curve->getPoint( 1, mdoc );
+  Coordinate coo1 = curve->getPoint( 0., mdoc );
+  Coordinate coo2 = curve->getPoint( 1., mdoc );
   workstack.push( workitem(
-                    coordparampair( 0, coo1 ),
-                    coordparampair( 1, coo2 ),
+                    coordparampair( 0., coo1 ),
+                    coordparampair( 1., coo2 ),
                     0 ) );
 
   // maxlength is the square of the maximum size that we allow
@@ -942,8 +720,8 @@ void KigPainter::drawCurve( const CurveImp* curve )
   // distance between two parameter values cannot be too small
   double hmin = 3e-5;
   // distance between two parameter values cannot be too large
-  double hmax = 1.0/40;
-  double hmaxoverlay = 1.0/8;
+  double hmax = 1./40;
+  double hmaxoverlay = 1./8;
 
   int count = 1;               // the number of segments we've already
                                // visited...
@@ -959,9 +737,6 @@ void KigPainter::drawCurve( const CurveImp* curve )
   // curve that we are currently processing.
   QPointArray curpolyline( 1000 );
   int curpolylinenextfree = 0;
-
-  // for debugging: to see in how many curve parts the curve is drawn.
-  int debug_nr_flushes = 0;
 
   // we don't use recursion, but a stack based approach for efficiency
   // concerns...
@@ -1001,7 +776,7 @@ void KigPainter::drawCurve( const CurveImp* curve )
       bool dooverlay = ! overlaypt && h < hmaxoverlay && valid0 && valid1
                        && fabs( p0.x - p1.x ) <= overlayRectSize()
                        && fabs( p0.y - p1.y ) <= overlayRectSize();
-      bool addn = valid && sr.contains( p2 );
+      bool addn = sr.contains( p2 ) || h >= hmax;
       // estimated error between the curve and the segments
       double errsq = 1e21;
       if ( allvalid ) errsq = (0.5*p0 + 0.5*p1 - p2).squareLength();
@@ -1027,10 +802,8 @@ void KigPainter::drawCurve( const CurveImp* curve )
           // flush the current part of the curve
           mP.drawPolyline( curpolyline, 0, curpolylinenextfree );
           curpolylinenextfree = 0;
-          debug_nr_flushes++;
-          curpolyline[curpolylinenextfree++] = tp1;
         }
-        if ( curpolylinenextfree == 0 ) 
+        if ( curpolylinenextfree == 0 )
           curpolyline[curpolylinenextfree++] = tp1;
         curpolyline[curpolylinenextfree++] = tp2;
         curpolyline[curpolylinenextfree++] = tp0;
@@ -1038,10 +811,10 @@ void KigPainter::drawCurve( const CurveImp* curve )
       else if ( h >= hmin )   // we do not continue to subdivide indefinitely!
       {
         // push into stack in order to process both subintervals
-        if ( addn || ( valid0 && sr.contains( p0 ) ) || h >= hmax )
+        if ( addn || ( valid0 && sr.contains( p0 ) ) )
           workstack.push( workitem( curitem.first, coordparampair( t2, p2 ),
                                     overlaypt ) );
-        if ( addn || ( valid1 && sr.contains( p1 ) ) || h >= hmax )
+        if ( addn || ( valid1 && sr.contains( p1 ) ) )
         {
           curitem = workitem( coordparampair( t2, p2 ), curitem.second ,
                               overlaypt );
@@ -1054,9 +827,6 @@ void KigPainter::drawCurve( const CurveImp* curve )
 //  mP.drawPolyline( curpolyline, 0, curpolylinenextfree - 1 );
   mP.drawPolyline( curpolyline, 0, curpolylinenextfree );
   curpolylinenextfree = 0;
-  debug_nr_flushes++;
-
-  kdDebug() << k_funcinfo << "nr of flushes: " << debug_nr_flushes << endl;
 
   if ( ! workstack.empty () )
     kdDebug() << "Stack not empty in KigPainter::drawCurve!\n" << endl;
@@ -1115,3 +885,4 @@ void KigPainter::drawArc( const Coordinate& center, const double radius,
   mP.drawArc( rect, startangle, angle );
   setWholeWinOverlay();
 }
+
