@@ -214,24 +214,6 @@ public:
 
   void drawVector( const Coordinate& a, const Coordinate& b );
 
-  /**
-   * draw a conic..
-   */
-  void drawConic( const ConicPolarData& data );
-
-  /**
-   * draw a cubic..
-   */
-  void drawCubic( const CubicCartesianData& data );
-  void drawCubicRecurse(
-                   double& xleft, double& yleft, bool& validleft,
-                   int& numrootsleft,
-                   double& xright, double& yright, bool& validright,
-                   int& numrootsright,
-                   const CubicCartesianData& data, int& root,
-                   double& ymin, double& ymax, double& tol,
-                   bool& tNeedOverlay, Rect& overlay);
-
   /*
    * draw text...
    * @see QPainter::drawText()
